[tool.poetry]
name = "recoveringsleepingbandit-1"
version = "0.1.0"
description = ""
authors = ["jakem <mazurkiewiczj@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "^15.0.2"
pandas = "^2.2.2"
fastparquet = "^2024.2.0"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
prettytable = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
